--- a/website/index.html
+++ b/website/index.html
@@ -13,6 +13,10 @@
         <label for="feel">Feelings</label>
         <input type="text" name="feel" id="feel"><br>
         <button id="generate"  >Generate</button> <!--onclick="generate"-->
-        </div>
+    </div>
+
+    <div id='data'>
+
+    </div>
 </body>
 </html>
