--- a/website/index.html
+++ b/website/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id='weather'>
         <label for="zip"> ZIP</label>
-        <input type="number" name="zip" id="zip"><br>
+        <input type="text" name="zip" id="zip"><br>
         <label for="feel">Feelings</label>
         <input type="text" name="feel" id="feel"><br>
         <button id="generate"  >Generate</button> <!--onclick="generate"-->
