--- a/website/index.html
+++ b/website/index.html
@@ -9,9 +9,9 @@
 <body>
     <div id='weather'>
         <label for="zip"> ZIP</label>
-        <input type="text" name="zip" id="zip"><br>
+        <input type="text" name="zip" id="zip" placeholder="i.e: 94040"><br>
         <label for="feel">Feelings</label>
-        <input type="text" name="feel" id="feel"><br>
+        <input type="text" name="feel" id="feel" placeholder="hot, cold, ok,.."><br>
         <button id="generate"  >Generate</button> <!--onclick="generate"-->
     </div>
 
