--- a/website/index.html
+++ b/website/index.html
@@ -5,18 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Journal</title>
     <script src="app.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h2>Enter Zip Code:</h2>
     <div id='weather'>
         <label for="zip"> ZIP</label>
         <input type="text" name="zip" id="zip" placeholder="i.e: 94040"><br>
-        <label for="feel">Feelings</label>
+        <label for="feel">your feel</label>
         <input type="text" name="feel" id="feel" placeholder="hot, cold, ok,.."><br>
         <button id="generate"  >Generate</button> <!--onclick="generate"-->
     </div>
 
     <div id='data'>
-
+        <h3>Result: </h3>
     </div>
 </body>
 </html>
